operator/pkg/gateway-api/testdata/gamma/mesh-request-header-modifier/output/cec-echo.yaml
metadata:
  creationTimestamp: null
  annotations:
    cec.cilium.io/use-original-source-address: "true"
  labels:
    gateway.networking.k8s.io/gateway-name: mesh-request-header-modifier
  name: echo
  namespace: gateway-conformance-mesh
  ownerReferences:
  - apiVersion: gateway.networking.k8s.io/v1
    controller: true
    kind: HTTPRoute
    name: mesh-request-header-modifier
    uid: ""
  resourceVersion: "1"
spec:
  backendServices:
  - name: echo-v1
    namespace: gateway-conformance-mesh
    number:
    - "8080"
  resources:
  - '@type': type.googleapis.com/envoy.config.listener.v3.Listener
    filterChains:
    - filterChainMatch:
        transportProtocol: raw_buffer
      filters:
      - name: envoy.filters.network.http_connection_manager
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          commonHttpProtocolOptions:
            maxStreamDuration: 0s
          httpFilters:
          - name: envoy.filters.http.grpc_web
            typedConfig:
              '@type': type.googleapis.com/envoy.extensions.filters.http.grpc_web.v3.GrpcWeb
          - name: envoy.filters.http.grpc_stats
            typedConfig:
              '@type': type.googleapis.com/envoy.extensions.filters.http.grpc_stats.v3.FilterConfig
              emitFilterState: true
              enableUpstreamStats: true
          - name: envoy.filters.http.router
            typedConfig:
              '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          internalAddressConfig: {}
          rds:
            routeConfigName: listener-insecure
          statPrefix: listener-insecure
          streamIdleTimeout: 300s
          upgradeConfigs:
          - upgradeType: websocket
          useRemoteAddress: true
    listenerFilters:
    - name: envoy.filters.listener.tls_inspector
      typedConfig:
        '@type': type.googleapis.com/envoy.extensions.filters.listener.tls_inspector.v3.TlsInspector
    name: listener
    socketOptions:
    - description: Enable TCP keep-alive (default to enabled)
      intValue: "1"
      level: "1"
      name: "9"
    - description: TCP keep-alive idle time (in seconds) (defaults to 10s)
      intValue: "10"
      level: "6"
      name: "4"
    - description: TCP keep-alive probe intervals (in seconds) (defaults to 5s)
      intValue: "5"
      level: "6"
      name: "5"
    - description: TCP keep-alive probe max failures.
      intValue: "10"
      level: "6"
      name: "6"
  - '@type': type.googleapis.com/envoy.config.route.v3.RouteConfiguration
    name: listener-insecure
    virtualHosts:
    - domains:
      - '*'
      name: '*'
      routes:
      - match:
          pathSeparatedPrefix: /case-insensitivity
        requestHeadersToAdd:
        - header:
            key: X-Header-Add
            value: header-add
        - appendAction: OVERWRITE_IF_EXISTS_OR_ADD
          header:
            key: X-Header-Set
            value: header-set
        requestHeadersToRemove:
        - X-Header-Remove
        route:
          cluster: gateway-conformance-mesh:echo-v1:8080
          maxStreamDuration:
            maxStreamDuration: 0s
      - match:
          pathSeparatedPrefix: /multiple
        requestHeadersToAdd:
        - header:
            key: X-Header-Add-1
            value: header-add-1
        - header:
            key: X-Header-Add-2
            value: header-add-2
        - header:
            key: X-Header-Add-3
            value: header-add-3
        - appendAction: OVERWRITE_IF_EXISTS_OR_ADD
          header:
            key: X-Header-Set-1
            value: header-set-1
        - appendAction: OVERWRITE_IF_EXISTS_OR_ADD
          header:
            key: X-Header-Set-2
            value: header-set-2
        requestHeadersToRemove:
        - X-Header-Remove-1
        - X-Header-Remove-2
        route:
          cluster: gateway-conformance-mesh:echo-v1:8080
          maxStreamDuration:
            maxStreamDuration: 0s
      - match:
          pathSeparatedPrefix: /remove
        requestHeadersToRemove:
        - X-Header-Remove
        route:
          cluster: gateway-conformance-mesh:echo-v1:8080
          maxStreamDuration:
            maxStreamDuration: 0s
      - match:
          pathSeparatedPrefix: /set
        requestHeadersToAdd:
        - appendAction: OVERWRITE_IF_EXISTS_OR_ADD
          header:
            key: X-Header-Set
            value: set-overwrites-values
        route:
          cluster: gateway-conformance-mesh:echo-v1:8080
          maxStreamDuration:
            maxStreamDuration: 0s
      - match:
          pathSeparatedPrefix: /add
        requestHeadersToAdd:
        - header:
            key: X-Header-Add
            value: add-appends-values
        route:
          cluster: gateway-conformance-mesh:echo-v1:8080
          maxStreamDuration:
            maxStreamDuration: 0s
  - '@type': type.googleapis.com/envoy.config.cluster.v3.Cluster
    edsClusterConfig:
      serviceName: gateway-conformance-mesh/echo-v1:8080
    name: gateway-conformance-mesh:echo-v1:8080
    outlierDetection:
      splitExternalLocalOriginErrors: true
    type: EDS
    typedExtensionProtocolOptions:
      envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
        '@type': type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
        commonHttpProtocolOptions:
          idleTimeout: 60s
        useDownstreamProtocolConfig:
          http2ProtocolOptions: {}
  services:
  - listener: ""
    name: echo
    namespace: gateway-conformance-mesh
    ports:
    - 80
